# ServiceProcesses

./: .gitignore  README.md
app/apps/android/: README.md  settings.gradle.kts
app/apps/windows/: README.md  (+1 more)
backend/: Cargo.toml  Dockerfile  README.md
backend/migrations/: 001_init.sql
backend/src/: lib.rs  main.rs
backend/src/application/: analytics_snapshot_service.rs  audit_service.rs  escalation_service.rs  mod.rs  rbac.rs  reporting_service.rs  service_request_service.rs  sla_service.rs  technician_service.rs  work_order_service.rs
backend/src/auth/: jwt.rs  mod.rs  principal.rs  users.rs
backend/src/domain/: analytics.rs  entities.rs  errors.rs  mod.rs  value_objects.rs
backend/src/infrastructure/: in_memory.rs  jobs.rs  mod.rs  redis_cache.rs
backend/src/infrastructure/postgres/: migrate.rs  mod.rs  repos.rs  seed.rs  user_store.rs
backend/src/infrastructure/postgres/entity/: analytics_snapshot.rs  app_user.rs  app_user_role.rs  asset.rs  audit_record.rs  escalation.rs  mod.rs  service_request.rs  technician.rs  work_order.rs
backend/src/interfaces/: http.rs
backend/src/ports/: data_scope.rs  inbound.rs  mod.rs  outbound.rs
docs/: assignment-rbac-orm-queue.md  backend-modules-guide.md  clients-run-guide.md  infrastructure-overview.md  rabbitmq-redis-and-docker.md  server-stack.md
docs/api/: backend-api.md
docs/rup/: supplementary-spec.md  uc1-register-request.md  uc4-sla-escalation.md  use-cases.md  vision.md
infra/: README.md
infra/docker/: docker-compose.yml  sample.env
infra/k8s/: backend-configmap.yaml  backend-deployment.yaml  backend-externalsecret.yaml  backend-secrets.example.yaml  backend-service.yaml  namespace.yaml  nexus.yaml  postgres.yaml  queue-worker-deployment.yaml  rabbitmq.yaml  redis.yaml  s3-minio.yaml  sla-worker-deployment.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+46 files in other folders)
