[package]
name = "service_processes_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "service_processes_core"
path = "src/lib.rs"

[[bin]]
name = "service_processes"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
