[package]
name = "service_processes_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "service_processes_core"
path = "src/lib.rs"

[[bin]]
name = "service_processes"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2"
bcrypt = "0.15"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
dotenvy = "0.15"
thiserror = "1.0"
regex = "1"
once_cell = "1.19"
bytes = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
# native-tls вместо rustls: иначе тянется ring (на части Windows-сборок падает cl.exe).
lapin = { version = "2.5", default-features = false, features = ["native-tls"] }
futures-util = "0.3"
